tests/cases/fail/tuple_target_single_element.p4
def main() -> None:
    pair: (int, int) = (1, 2)
    (value) = pair
